log/build_2024-03-06_13-29-58/drone_controller_vrep/stdout_stderr.log
running egg_info
writing ../../build/drone_controller_vrep/drone_controller_vrep.egg-info/PKG-INFO
writing dependency_links to ../../build/drone_controller_vrep/drone_controller_vrep.egg-info/dependency_links.txt
writing entry points to ../../build/drone_controller_vrep/drone_controller_vrep.egg-info/entry_points.txt
writing requirements to ../../build/drone_controller_vrep/drone_controller_vrep.egg-info/requires.txt
writing top-level names to ../../build/drone_controller_vrep/drone_controller_vrep.egg-info/top_level.txt
reading manifest file '../../build/drone_controller_vrep/drone_controller_vrep.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/drone_controller_vrep/drone_controller_vrep.egg-info/SOURCES.txt'
running build
running build_py
copying drone_controller_vrep/drone_feedback_controller.py -> /home/zain/Projects/MasterThesis/build/drone_controller_vrep/build/lib/drone_controller_vrep
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /home/zain/Projects/MasterThesis/build/drone_controller_vrep/build/lib/drone_controller_vrep/drone_feedback_controller.py -> /home/zain/Projects/MasterThesis/install/drone_controller_vrep/lib/python3.10/site-packages/drone_controller_vrep
byte-compiling /home/zain/Projects/MasterThesis/install/drone_controller_vrep/lib/python3.10/site-packages/drone_controller_vrep/drone_feedback_controller.py to drone_feedback_controller.cpython-310.pyc
  File "/home/zain/Projects/MasterThesis/install/drone_controller_vrep/lib/python3.10/site-packages/drone_controller_vrep/drone_feedback_controller.py", line 2
    from rclpy.node import Node, 
                                 ^
SyntaxError: trailing comma not allowed without surrounding parentheses

running install_data
running install_egg_info
removing '/home/zain/Projects/MasterThesis/install/drone_controller_vrep/lib/python3.10/site-packages/drone_controller_vrep-0.1.0-py3.10.egg-info' (and everything under it)
Copying ../../build/drone_controller_vrep/drone_controller_vrep.egg-info to /home/zain/Projects/MasterThesis/install/drone_controller_vrep/lib/python3.10/site-packages/drone_controller_vrep-0.1.0-py3.10.egg-info
running install_scripts
Installing drone_feedback_controller script to /home/zain/Projects/MasterThesis/install/drone_controller_vrep/lib/drone_controller_vrep
writing list of installed files to '/home/zain/Projects/MasterThesis/build/drone_controller_vrep/install.log'
